# multi-agent-postgres-data-analytics

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agent_results/give_me_all_failed_jobs__13_09_23/: agent_chats_scrum_master_team.json
agent_results/give_me_all_failed_jobs__13_09_29/: 0_innovation_file.json  agent_chats_data_insights_team.json
agent_results/give_me_all_products_that_cost__13_18_30/: 0_innovation_file.json  1_innovation_file.json  agent_chats_data_eng_team.json  agent_chats_data_insights_team.json  agent_chats_scrum_master_team.json  run_sql_results.json
api-server/: .env.sample  .gitignore  README.md  requirements.txt  vercel.json
api-server/api/: index.py
api-server/api/modules/: db.py  emb.py  file.py  instruments.py  llm.py  models.py  turbo4.py
da_ai_agent/: data_types.py  main_postgres.py  main_presto.py  turbo_main_postgres.py  turbo_main_presto.py
da_ai_agent/agents/: agent_config.py  agents_postgres.py  agents_presto.py  instruments.py  turbo4.py
da_ai_agent/modules/: db_presto.py  embeddings_postgres.py  embeddings_presto.py  llm.py  orchestrator.py  rand.py
fe-clients/react-ts/: README.md  bun.lockb  index.html  package-lock.json  package.json
fe-clients/react-ts/src/: App.css  App.tsx
fe-clients/svelte-ts/: .gitignore  README.md  bun.lockb  package.json
fe-clients/svelte-ts/src/: App.svelte  app.css
fe-clients/vue-ts/: README.md  bun.lockb  package.json
fe-clients/vue-ts/src/: App.vue
postgres_da_ai_agent/: example.py  main.py  main_postgres.py  main_presto.py  turbo_main.py  turbo_main_presto.py  types.py
postgres_da_ai_agent/agents/: agent_config.py  agents.py  agents_postgres.py  agents_presto.py  instruments.py  turbo4.py
postgres_da_ai_agent/modules/: db.py  db_postgres.py  db_presto.py  embeddings.py  embeddings_postgres.py  embeddings_presto.py  file.py  llm.py  orchestrator.py
scripts/: presto_query.py
